add inventory page go to single product detail information page on click and return to inventory function

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -592,6 +592,15 @@ textarea::placeholder {
   width: 13.88%;
 }
 
+.inventory__item {
+  width: 350px;
+  color: #323232;
+}
+
+.inventory__container--item {
+  color: #323232;
+}
+
 .locations {
   display: -webkit-box;
   display: -ms-flexbox;
