--- a/client/src/styles/partials/_inventory.scss
+++ b/client/src/styles/partials/_inventory.scss
@@ -1,197 +1,169 @@
 .inventory {
-  display: flex;
-  flex-direction: column;
-  margin: 0 1rem 3rem 1rem;
-
-  @include tablet {
-    margin: 0 1.5rem 3rem 1.5rem;
-  }
-
-  @include desktop {
-    margin: 0 auto;
-    margin-bottom: 3rem;
-    width: 67.5rem;
-  }
-
-  &__wrapper {
     display: flex;
     flex-direction: column;
-    height: 8rem;
-
+    margin: 0 1rem 3rem 1rem;
     @include tablet {
-      flex-direction: row;
-      justify-content: space-between;
-      margin-top: 3rem;
-      height: 6rem;
+        margin: 0 1.5rem 3rem 1.5rem;
     }
-  }
-
-  &__header {
-    @include header;
-    margin: 2rem 0 1rem 0;
-
-    @include tablet {
-      @include headerOne-tablet;
-      margin: 0;
-      // margin-bottom: 3rem;
-    }
-  }
-
-  &__search {
-    position: relative;
-    margin-bottom: 2rem;
-    width: 90%;
-
-    @include tablet {
-      width: 15.75rem;
-    }
-
-    &--input {
-      @extend .input;
-      padding: 0 0.75rem 0 2.5rem;
-      height: 3rem;
-    }
-
-    &--icon {
-      position: absolute;
-      top: 1rem;
-      left: 1rem;
-    }
-  }
-
-  &__bodyMobile {
-    @include tablet {
-      display: none;
-    }
-  }
-
-  &__wrapperMobile {
-    display: flex;
-    align-items: flex-start;
-    border-bottom: 1px solid $mercury;
-    margin-top: 2rem;
-  }
-
-  &__container {
-    flex-direction: column;
-  }
-
-  &__title {
-    @include label;
-    margin-top: 0;
-    margin-bottom: 1rem;
-
-    @include tablet {
-      margin-bottom: 0.5rem;
-    }
-
     @include desktop {
-      margin-bottom: 0;
+        margin: 0 auto;
+        margin-bottom: 3rem;
+        width: 67.5rem;
     }
-  }
-
-  &__product {
-    @include paragraph-bold;
-    margin-top: 0;
-    margin-bottom: 1rem;
-
-    @include tablet {
-      @include subheader-tablet;
-      margin-bottom: 0;
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        height: 8rem;
+        @include tablet {
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: 3rem;
+            height: 6rem;
+        }
     }
-  }
-
-  &__text {
-    @include paragraph;
-    margin: 0;
-    margin-bottom: 1.5rem;
-
-    @include tablet {
-      @include paragraph-tablet;
-      margin-bottom: 0;
+    &__header {
+        @include header;
+        margin: 2rem 0 1rem 0;
+        @include tablet {
+            @include headerOne-tablet;
+            margin: 0;
+            // margin-bottom: 3rem;
+        }
     }
-
-    @include desktop {
-      height: 22px;
-      overflow: hidden;
+    &__search {
+        position: relative;
+        margin-bottom: 2rem;
+        width: 90%;
+        @include tablet {
+            width: 15.75rem;
+        }
+        &--input {
+            @extend .input;
+            padding: 0 0.75rem 0 2.5rem;
+            height: 3rem;
+        }
+        &--icon {
+            position: absolute;
+            top: 1rem;
+            left: 1rem;
+        }
     }
-  }
-
-  &__kebabIcon {
-    margin-left: auto;
-
-    @include tablet {
-      margin-right: 1.5rem;
+    &__bodyMobile {
+        @include tablet {
+            display: none;
+        }
     }
-  }
-
-  &__button {
-    @extend .round-button;
-    width: 3.75rem;
-    height: 3.75rem;
-    position: absolute;
-    position: fixed;
-    bottom: 5rem;
-    right: 2rem;
-
-    @include tablet {
-      width: 5rem;
-      height: 5rem;
-      right: 3rem;
+    &__wrapperMobile {
+        display: flex;
+        align-items: flex-start;
+        border-bottom: 1px solid $mercury;
+        margin-top: 2rem;
     }
-
-    &--addIcon {
-      width: 1.25rem;
-
-      @include tablet {
-        width: 1.5rem;
-      }
+    &__container {
+        flex-direction: column;
     }
-  }
-
-  &__bodyTablet {
-    display: none;
-
-    @include tablet {
-      display: flex;
-      flex-direction: column;
+    &__title {
+        @include label;
+        margin-top: 0;
+        margin-bottom: 1rem;
+        @include tablet {
+            margin-bottom: 0.5rem;
+        }
+        @include desktop {
+            margin-bottom: 0;
+        }
     }
-  }
-
-  &__titleWrapper {
-    display: flex;
-  }
-
-  &__contentWrapper {
-    display: flex;
-    align-items: center;
-    padding: 1.5rem 0;
-    border-bottom: 1px solid $mercury;
-    height: 6.25rem;
-
-    @include desktop {
-      height: 5rem;
+    &__product {
+        @include paragraph-bold;
+        margin-top: 0;
+        margin-bottom: 1rem;
+        @include tablet {
+            @include subheader-tablet;
+            margin-bottom: 0;
+        }
     }
-  }
-
-  &__item {
-    width: 34.44%;
-    padding-right: 1.5rem;
-
-    @include desktop {
-      margin-bottom: 0;
+    &__text {
+        @include paragraph;
+        margin: 0;
+        margin-bottom: 1.5rem;
+        @include tablet {
+            @include paragraph-tablet;
+            margin-bottom: 0;
+        }
+        @include desktop {
+            height: 22px;
+            overflow: hidden;
+        }
     }
-  }
+    &__kebabIcon {
+        margin-left: auto;
+        @include tablet {
+            margin-right: 1.5rem;
+        }
+    }
+    &__button {
+        @extend .round-button;
+        width: 3.75rem;
+        height: 3.75rem;
+        position: absolute;
+        position: fixed;
+        bottom: 5rem;
+        right: 2rem;
+        @include tablet {
+            width: 5rem;
+            height: 5rem;
+            right: 3rem;
+        }
+        &--addIcon {
+            width: 1.25rem;
+            @include tablet {
+                width: 1.5rem;
+            }
+        }
+    }
+    &__bodyTablet {
+        display: none;
+        @include tablet {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    &__titleWrapper {
+        display: flex;
+    }
+    &__contentWrapper {
+        display: flex;
+        align-items: center;
+        padding: 1.5rem 0;
+        border-bottom: 1px solid $mercury;
+        height: 6.25rem;
+        @include desktop {
+            height: 5rem;
+        }
+    }
+    &__item {
+        width: 34.44%;
+        padding-right: 1.5rem;
+        @include desktop {
+            margin-bottom: 0;
+        }
+    }
+    &__order {
+        width: 17.22%;
+    }
+    &__location {
+        width: 17.22%;
+    }
+    &__quantity {
+        width: 13.88%;
+    }
+}
 
-  &__order {
-    width: 17.22%;
-  }
+.inventory__item {
+    width: 350px;
+    color: $black;
+}
 
-  &__location {
-    width: 17.22%;
-  }
-
-  &__quantity {
-    width: 13.88%;
-  }
+.inventory__container--item {
+    color: $black;
 }
