--- a/client/src/styles/partials/_header.scss
+++ b/client/src/styles/partials/_header.scss
@@ -59,7 +59,7 @@
     display: flex;
     justify-content: center;
 
-    &:active,
+    &--active,
     &:hover {
       color: $white;
       font-family: Avenir Bold Demi;
