--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1292,6 +1292,10 @@ textarea::placeholder {
   margin-bottom: 35px;
 }
 
+.product__status p {
+  padding-top: 2px;
+}
+
 .product__itemDesc P, .product__lastOrder P, .product__location P, .product__quantity P, .product__categories P {
   font-family: Avenir Regular;
   font-size: 0.813rem;
@@ -1422,7 +1426,6 @@ textarea::placeholder {
   }
   .product__status p {
     font-size: 12px;
-    padding-top: 4px;
   }
   .product__itemDesc-title {
     margin-top: 40px;
