--- a/client/src/styles/partials/_product.scss
+++ b/client/src/styles/partials/_product.scss
@@ -21,6 +21,9 @@
         color: white;
         font-family: Avenir Bold Demi;
         margin-bottom: 35px;
+        p {
+            padding-top: 2px;
+        }
     }
     &__itemDesc,
     &__lastOrder,
@@ -143,7 +146,6 @@
             margin-left: 24px;
             p {
                 font-size: 12px;
-                padding-top: 4px;
             }
         }
         &__itemDesc-title {
