--- a/client/src/styles/partials/_header.scss
+++ b/client/src/styles/partials/_header.scss
@@ -1,76 +1,70 @@
 // Nav section
 .header {
-  display: flex;
-  flex-direction: column;
-  background: $black;
-  height: 5rem;
-
-  @include tablet {
-    flex-direction: row;
-    justify-content: left;
-  }
-
-  // contains logo and navs
-  &__container {
     display: flex;
     flex-direction: column;
-
+    background: $black;
+    height: 5rem;
     @include tablet {
-      flex-direction: row;
-      align-items: center;
-      margin: 0 1.5rem;
+        flex-direction: row;
+        justify-content: left;
     }
-
-    @include desktop {
-      width: 67.5rem;
-      margin: 0 auto;
+    .active {
+        color: $white;
+        font-family: Avenir Bold Demi;
+        border-bottom: 0.25rem solid $white;
     }
-  }
-
-  &__logo {
-    display: block;
-    box-sizing: content-box;
-    margin: 0 auto;
-    height: 1.2rem;
-    padding: 1rem 0;
-
-    @include tablet {
-      margin-right: 0;
+    // contains logo and navs
+    &__container {
+        display: flex;
+        flex-direction: column;
+        @include tablet {
+            flex-direction: row;
+            align-items: center;
+            margin: 0 1.5rem;
+        }
+        @include desktop {
+            width: 67.5rem;
+            margin: 0 auto;
+        }
     }
-
-    @include desktop {
-      margin-left: 0;
+    &__logo {
+        display: block;
+        box-sizing: content-box;
+        margin: 0 auto;
+        height: 1.2rem;
+        padding: 1rem 0;
+        @include tablet {
+            margin-right: 0;
+        }
+        @include desktop {
+            margin-left: 0;
+        }
     }
-  }
-
-  &__nav {
-    display: flex;
-    justify-content: space-around;
-    font-family: Avenir Regular;
-    font-size: 0.875rem;
-    color: $silver;
-  }
-
-  &__link {
-    margin: 0;
-    width: 50%;
-    height: 1.8rem;
-    color: $silver;
-    display: flex;
-    justify-content: center;
-
-    &--active,
-    &:hover {
-      color: $white;
-      font-family: Avenir Bold Demi;
-      border-bottom: 0.25rem solid $white;
+    &__nav {
+        display: flex;
+        justify-content: space-around;
+        font-family: Avenir Regular;
+        font-size: 0.875rem;
+        color: $silver;
     }
-
-    @include tablet {
-      margin-top: 2rem;
-      margin-left: 3.5rem;
-      height: 3rem;
-      width: 5rem;
+    &__link {
+        margin: 0;
+        width: 50%;
+        height: 1.8rem;
+        color: $silver;
+        display: flex;
+        justify-content: center;
+        &--active,
+        &:hover {
+            color: $white;
+            font-family: Avenir Bold Demi;
+            border-bottom: 0.25rem solid $white;
+        }
+        @include tablet {
+            margin-top: 2rem;
+            margin-left: 3.5rem;
+            height: 3rem;
+            width: 5rem;
+        }
     }
-  }
 }
