cleaned up Header & worked on kebab toggle on Inventory

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -507,6 +507,7 @@ textarea::placeholder {
   margin-left: auto;
   position: relative;
   display: inline-block;
+  margin-right: 0.5rem;
 }
 
 @media (min-width: 768px) {
@@ -515,7 +516,8 @@ textarea::placeholder {
   }
 }
 
-.inventory__iconWrapper:hover .inventory__kebabIcon--hover {
+.inventory__iconWrapper:hover .inventory__kebabIcon--hover,
+.inventory__iconWrapper:hover .inventory__remove {
   display: inline;
 }
 
@@ -524,7 +526,7 @@ textarea::placeholder {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 10;
 }
 
 .inventory__button {
@@ -534,6 +536,7 @@ textarea::placeholder {
   position: fixed;
   bottom: 5rem;
   right: 2rem;
+  z-index: 99;
 }
 
 @media (min-width: 768px) {
@@ -615,6 +618,28 @@ textarea::placeholder {
 
 .inventory__quantity {
   width: 13.88%;
+}
+
+.inventory__remove {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  width: 10.063rem;
+  height: 2.75rem;
+  padding-right: 5rem;
+  border-radius: 0.25rem;
+  border: 1px solid #e1e1e1;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+  top: 1.75rem;
+  right: -0.75rem;
+  z-index: 10;
+  -webkit-box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
+}
+
+.inventory__remove:focus {
+  border: 2px solid #323232;
 }
 
 .inventory__item {
