--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -64,7 +64,7 @@
   background-color: #002f5f;
 }
 
-.button, .createNew__btn {
+.button, .createNew__btn, .product__btn {
   font-family: Avenir Bold Demi;
   font-size: 0.813rem;
   line-height: 1.125rem;
@@ -88,7 +88,7 @@
   transition: 0.3s ease-in-out;
 }
 
-.button:hover, .createNew__btn:hover, .button:focus, .createNew__btn:focus {
+.button:hover, .createNew__btn:hover, .product__btn:hover, .button:focus, .createNew__btn:focus, .product__btn:focus {
   background-color: #002f5f;
 }
 
@@ -1333,17 +1333,41 @@ textarea::placeholder {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 110px;
-  height: 30px;
-  border-radius: 4px;
-  background-color: #12b812;
   color: white;
   font-family: Avenir Bold Demi;
   margin-bottom: 35px;
 }
 
-.product__status p {
-  padding-top: 2px;
+.product__status--in {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 88px;
+  height: 24px;
+  border-radius: 4px;
+  background-color: #69b02f;
+}
+
+.product__status--out {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 88px;
+  height: 24px;
+  border-radius: 4px;
+  background-color: #afafaf;
 }
 
 .product__itemDesc P, .product__lastOrder P, .product__location P, .product__quantity P, .product__categories P {
@@ -1360,21 +1384,7 @@ textarea::placeholder {
 }
 
 .product__btn {
-  width: 100%;
-  height: 50px;
   margin: 20px 0;
-  border: 1px solid black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 4px;
-  background-color: #002f5f;
 }
 
 .product__btn button {
@@ -1383,7 +1393,6 @@ textarea::placeholder {
   background-color: transparent;
   color: #ffffff;
   font-size: 16px;
-  font-family: Avenir Bold Demi;
 }
 
 @media (min-width: 768px) {
