--- a/client/src/styles/partials/_product.scss
+++ b/client/src/styles/partials/_product.scss
@@ -11,13 +11,13 @@
     }
   }
   &__status {
+    @include label;
     display: flex;
-    justify-content: center;
-    align-items: center;
     color: white;
-    font-family: Avenir Bold Demi;
     margin-bottom: 35px;
-
+    p {
+      margin: 0;
+    }
     &--in {
       display: flex;
       justify-content: center;
@@ -53,6 +53,10 @@
   &__categories-title {
     @include subheader;
     color: $silver;
+    margin-top: 2rem;
+  }
+  &__categories--text {
+    margin-bottom: 40px;
   }
   &__btn {
     @extend .button;
@@ -119,11 +123,12 @@
       width: 70%;
     }
     &__categories {
-      padding-bottom: 30px;
+      // padding-bottom: 30px;
     }
     &__btn {
       width: 160px;
       height: 48px;
+      margin-top: 40px;
     }
     &__btn-container {
       width: 95%;
@@ -165,8 +170,10 @@
       margin: 0;
     }
     &__categories {
-      padding-top: 42px;
-      padding-bottom: 48px;
+      margin-top: 56px;
+      &--text {
+        margin-bottom: 48px;
+      }
     }
     &__itemDesc,
     &__lastOrder,
@@ -174,7 +181,7 @@
     &__quantity,
     &__categories {
       P {
-        margin: 24px 0;
+        margin-top: 24px;
       }
     }
     &__itemInfo-wrapper {
