--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -115,6 +115,7 @@ a:visited {
   display: -ms-flexbox;
   display: flex;
   text-decoration: none;
+  color: #323232;
 }
 
 ul {
@@ -231,12 +232,6 @@ textarea::placeholder {
   }
 }
 
-.header .active {
-  color: #ffffff;
-  font-family: Avenir Bold Demi;
-  border-bottom: 0.25rem solid #ffffff;
-}
-
 .header__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -299,6 +294,10 @@ textarea::placeholder {
   color: #afafaf;
 }
 
+.header__nav--text {
+  color: #afafaf;
+}
+
 .header__link {
   margin: 0;
   width: 50%;
@@ -312,7 +311,7 @@ textarea::placeholder {
           justify-content: center;
 }
 
-.header__link--active, .header__link:hover {
+.header__link:hover {
   color: #ffffff;
   font-family: Avenir Bold Demi;
   border-bottom: 0.25rem solid #ffffff;
@@ -325,6 +324,12 @@ textarea::placeholder {
     height: 3rem;
     width: 5rem;
   }
+}
+
+.header .active {
+  color: #ffffff;
+  font-family: Avenir Bold Demi;
+  border-bottom: 0.25rem solid #ffffff;
 }
 
 .inventory {
@@ -598,7 +603,7 @@ textarea::placeholder {
 }
 
 .inventory__item {
-  width: 34.44%;
+  width: 350px;
   padding-right: 1.5rem;
 }
 
@@ -640,15 +645,6 @@ textarea::placeholder {
 
 .inventory__remove:focus {
   border: 2px solid #323232;
-}
-
-.inventory__item {
-  width: 350px;
-  color: #323232;
-}
-
-.inventory__container--item {
-  color: #323232;
 }
 
 .locations {
