--- a/client/src/styles/partials/_header.scss
+++ b/client/src/styles/partials/_header.scss
@@ -8,6 +8,11 @@
     flex-direction: row;
     justify-content: left;
   }
+  .active {
+    color: $white;
+    font-family: Avenir Bold Demi;
+    border-bottom: 0.25rem solid $white;
+  }
   // contains logo and navs
   &__container {
     display: flex;
@@ -41,10 +46,6 @@
     font-family: Avenir Regular;
     font-size: 0.875rem;
     color: $silver;
-
-    &--text {
-      color: $silver;
-    }
   }
   &__link {
     margin: 0;
@@ -54,6 +55,7 @@
     display: flex;
     justify-content: center;
 
+    &--active,
     &:hover {
       color: $white;
       font-family: Avenir Bold Demi;
@@ -65,10 +67,5 @@
       height: 3rem;
       width: 5rem;
     }
-  }
-  .active {
-    color: $white;
-    font-family: Avenir Bold Demi;
-    border-bottom: 0.25rem solid $white;
   }
 }
