--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -149,3 +149,12 @@
     background-color: $instock-blue-dark;
   }
 }
+
+.status-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5.5rem;
+  height: 1.5rem;
+  border-radius: 0.25rem;
+}
