--- a/client/src/styles/partials/_product.scss
+++ b/client/src/styles/partials/_product.scss
@@ -7,7 +7,6 @@
     h2 {
       padding-left: 15px;
       font-family: Avenir Bold;
-      padding-top: 5px;
     }
   }
   &__status {
@@ -51,8 +50,7 @@
   &__location-title,
   &__quantity-title,
   &__categories-title {
-    @include subheader;
-    color: $silver;
+    @include label;
     margin-top: 2rem;
   }
   &__categories--text {
@@ -77,7 +75,7 @@
   .product-container1 {
     display: flex;
     align-items: center;
-    border-bottom: 2px solid $mercury;
+    border-bottom: 1px solid $mercury;
   }
   .product {
     &__name {
@@ -89,20 +87,11 @@
       margin-bottom: 0;
       margin-left: 35px;
     }
-    &__itemDesc-title {
-      @include subheader-tablet;
-    }
-    &__lastOrder-title,
-    &__location-title,
-    &__quantity-title,
-    &__categories-title {
-      @include subheader-tablet;
-      color: $silver;
-    }
+
     .product-container2 {
       width: 95%;
       margin: 0 auto;
-      border-bottom: 2px solid $mercury;
+      border-bottom: 1px solid $mercury;
     }
     &__itemDesc {
       margin-top: 30px;
@@ -193,7 +182,7 @@
   }
   .product-container2 {
     display: flex;
-    border-bottom: 2px solid $mercury;
+    border-bottom: 1px solid $mercury;
   }
   .product-wrapper {
     margin-top: 40px;
