1. route complete, when click edit button, direct to edit page for the product. 2. mobile mock up 50% complete 3. now you can input info after hit save, it will send to sever as a get request. Needs to be change to put request. Need to create put method at back end

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1612,4 +1612,36 @@ textarea::placeholder {
     margin-bottom: 56px;
   }
 }
+
+.editProduct textarea {
+  border: 1px solid #e1e1e1;
+  width: 100%;
+  height: 20vh;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
+
+.editProduct ::-webkit-input-placeholder {
+  padding: 15px;
+}
+
+.editProduct :-ms-input-placeholder {
+  padding: 15px;
+}
+
+.editProduct ::-ms-input-placeholder {
+  padding: 15px;
+}
+
+.editProduct ::placeholder {
+  padding: 15px;
+}
+
+.editProduct input {
+  border: 1px solid #e1e1e1;
+  width: 100%;
+  height: 10vh;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
 /*# sourceMappingURL=main.css.map */
