add cancel button, style button in mobile version

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1644,4 +1644,38 @@ textarea::placeholder {
   border-radius: 4px;
   background-color: #fafafa;
 }
+
+.editProduct .product__btn {
+  font-size: 1.1rem;
+}
+
+.editProduct .product_btn-cancel {
+  font-family: Avenir Bold Demi;
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  color: #004892;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0;
+}
+
+.editProduct .product__btn-container--ep {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.editProduct .product__btn-cancel {
+  text-align: center;
+}
+
+.editProduct .product__btn-cancel {
+  font-family: Avenir Bold Demi;
+  color: #004892;
+}
 /*# sourceMappingURL=main.css.map */
