--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -477,6 +477,11 @@ textarea::placeholder {
   }
 }
 
+.inventory__itemWrapper {
+  width: 34.44%;
+  padding-right: 1rem;
+}
+
 .inventory__product {
   font-family: Avenir Bold Demi;
   font-size: 0.813rem;
@@ -493,6 +498,7 @@ textarea::placeholder {
     line-height: 1.35rem;
     margin-bottom: 0;
     color: #323232;
+    width: 100%;
   }
 }
 
@@ -512,6 +518,7 @@ textarea::placeholder {
     line-height: 1.375rem;
     color: #323232;
     margin-bottom: 0;
+    width: 100%;
   }
 }
 
@@ -520,6 +527,13 @@ textarea::placeholder {
     height: 22px;
     overflow: hidden;
   }
+}
+
+.inventory__statusWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 17.22%;
 }
 
 .inventory__iconWrapper {
@@ -531,7 +545,8 @@ textarea::placeholder {
 
 @media (min-width: 768px) {
   .inventory__iconWrapper {
-    margin-right: 1.5rem;
+    padding-right: 0.5rem;
+    margin-left: auto;
   }
 }
 
@@ -589,6 +604,7 @@ textarea::placeholder {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    width: 100%;
   }
 }
 
@@ -596,6 +612,12 @@ textarea::placeholder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (min-width: 768px) {
+  .inventory__titleWrapper {
+    width: 100%;
+  }
 }
 
 .inventory__contentWrapper {
@@ -610,6 +632,12 @@ textarea::placeholder {
   height: 6.25rem;
 }
 
+@media (min-width: 768px) {
+  .inventory__contentWrapper {
+    width: 100%;
+  }
+}
+
 @media (min-width: 1080px) {
   .inventory__contentWrapper {
     height: 5rem;
@@ -619,6 +647,13 @@ textarea::placeholder {
 .inventory__item {
   width: 350px;
   padding-right: 1.5rem;
+}
+
+@media (min-width: 768px) {
+  .inventory__item {
+    padding: 0;
+    width: 34.44%;
+  }
 }
 
 @media (min-width: 1080px) {
@@ -636,7 +671,11 @@ textarea::placeholder {
 }
 
 .inventory__quantity {
-  width: 13.88%;
+  width: 13.89%;
+}
+
+.inventory__status {
+  width: 17.22%;
 }
 
 .inventory__remove {
