--- a/client/src/styles/partials/_inventory.scss
+++ b/client/src/styles/partials/_inventory.scss
@@ -66,12 +66,18 @@
     @include label;
     margin-top: 0;
     margin-bottom: 1rem;
+
     @include tablet {
       margin-bottom: 0.5rem;
     }
     @include desktop {
       margin-bottom: 0;
     }
+  }
+
+  &__itemWrapper {
+    width: 34.44%;
+    padding-right: 1rem;
   }
   &__product {
     @include paragraph-bold;
@@ -82,6 +88,7 @@
       @include subheader-tablet;
       margin-bottom: 0;
       color: $black;
+      width: 100%;
     }
   }
   &__text {
@@ -93,11 +100,17 @@
       @include paragraph-tablet;
       color: $black;
       margin-bottom: 0;
+      width: 100%;
     }
     @include desktop {
       height: 22px;
       overflow: hidden;
     }
+  }
+
+  &__statusWrapper {
+    display: flex;
+    width: 17.22%;
   }
 
   &__iconWrapper {
@@ -107,7 +120,8 @@
     margin-right: 0.5rem;
 
     @include tablet {
-      margin-right: 1.5rem;
+      padding-right: 0.5rem;
+      margin-left: auto;
     }
 
     &:hover .inventory__kebabIcon--hover,
@@ -152,10 +166,14 @@
     @include tablet {
       display: flex;
       flex-direction: column;
+      width: 100%;
     }
   }
   &__titleWrapper {
     display: flex;
+    @include tablet {
+      width: 100%;
+    }
   }
   &__contentWrapper {
     display: flex;
@@ -164,14 +182,23 @@
     border-bottom: 1px solid $mercury;
     height: 6.25rem;
 
+    @include tablet {
+      width: 100%;
+    }
+
     @include desktop {
       height: 5rem;
     }
   }
   &__item {
     width: 350px;
-    // width: 34.44%;
     padding-right: 1.5rem;
+
+    @include tablet {
+      padding: 0;
+      width: 34.44%;
+    }
+
     @include desktop {
       margin-bottom: 0;
     }
@@ -183,7 +210,10 @@
     width: 17.22%;
   }
   &__quantity {
-    width: 13.88%;
+    width: 13.89%;
+  }
+  &__status {
+    width: 17.22%;
   }
 
   &__remove {
